# mox-fav

./: README.md  moccasin.toml  pyproject.toml
script/: deploy.py  deploy.py~
src/: favorites.vy  favorites.vy~  favorites_factory.vy  favorites_factory.vy~  five-more.vy  five-more.vy~
src/interfaces/: i_favorites.vyi
tests/: conftest.py  test_favorites.py
